--- a/readium/shared/r2-shared/src/main/res/values/strings.xml
+++ b/readium/shared/r2-shared/src/main/res/values/strings.xml
@@ -6,6 +6,13 @@
 -->
 
 <resources>
+    <string name="r2.shared.publication.opening_exception.unsupported_format">Format not supported</string>
+    <string name="r2.shared.publication.opening_exception.not_found">File not found</string>
+    <string name="r2.shared.publication.opening_exception.parsing_failed">The file is corrupted and can\'t be opened</string>
+    <string name="r2.shared.publication.opening_exception.forbidden">You are not allowed to open this publication</string>
+    <string name="r2.shared.publication.opening_exception.unavailable">Not available, please try again later</string>
+    <string name="r2.shared.publication.opening_exception.incorrect_credentials">Provided credentials were incorrect</string>
+
     <string name="r2.shared.resource.exception.bad_request">Invalid request which can\'t be processed</string>
     <string name="r2.shared.resource.exception.not_found">Resource not found</string>
     <string name="r2.shared.resource.exception.forbidden">You are not allowed to access the resource</string>
