Add a customizable HTTP networking layer (#148)
* `HttpFetcher` is a new publication fetcher able to serve remote resources through HTTP.
    * The actual HTTP requests are performed with an instance of `HttpClient`.
* `HttpClient` is a new protocol exposing a high level API to perform HTTP requests.
    * `DefaultHttpClient` is an implementation of `HttpClient` using standard `HttpURLConnection` APIs. You can use its delegate to customize how requests are created and even recover from errors, e.g. to implement Authentication for OPDS.
    * You can provide your own implementation of `HttpClient` to Readium APIs if you prefer to use a third-party networking library.

--- a/readium/shared/r2-shared/src/main/res/values/strings.xml
+++ b/readium/shared/r2-shared/src/main/res/values/strings.xml
@@ -20,4 +20,17 @@
     <string name="r2.shared.resource.exception.out_of_memory">The resource is too large to be read on this device</string>
     <string name="r2.shared.resource.exception.cancelled">The request was cancelled</string>
     <string name="r2.shared.resource.exception.other">A service error occurred</string>
+
+    <string name="r2.shared.http.exception.malformed_request">The provided request was not valid</string>
+    <string name="r2.shared.http.exception.malformed_response">The received response could not be decoded</string>
+    <string name="r2.shared.http.exception.timeout">Request timed out</string>
+    <string name="r2.shared.http.exception.bad_request">The provided request was not valid</string>
+    <string name="r2.shared.http.exception.unauthorized">Authentication required</string>
+    <string name="r2.shared.http.exception.forbidden">You are not authorized</string>
+    <string name="r2.shared.http.exception.not_found">Page not found</string>
+    <string name="r2.shared.http.exception.client_error">A client error occurred</string>
+    <string name="r2.shared.http.exception.server_error">A server error occurred, please try again later</string>
+    <string name="r2.shared.http.exception.offline">Your Internet connection appears to be offline</string>
+    <string name="r2.shared.http.exception.cancelled">The request was cancelled</string>
+    <string name="r2.shared.http.exception.other">A networking error occurred</string>
 </resources>
