Add a Publication Search Service for background search (#154)

--- a/readium/shared/r2-shared/src/main/res/values/strings.xml
+++ b/readium/shared/r2-shared/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="r2.shared.http.exception.offline">Your Internet connection appears to be offline</string>
     <string name="r2.shared.http.exception.cancelled">The request was cancelled</string>
     <string name="r2.shared.http.exception.other">A networking error occurred</string>
+
+    <string name="r2.shared.search.exception.publication_not_searchable">This publication is not searchable</string>
+    <string name="r2.shared.search.exception.cancelled">The search was cancelled</string>
+    <string name="r2.shared.search.exception.other">An error occurred while searching</string>
 </resources>
