Update dependencies and fix tests

--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -197,4 +197,6 @@
     <string name="play_or_pause">Play or pause</string>
     <string name="go_forward_30_seconds">Go forward 30 seconds</string>
     <string name="select_a_font">Select a font</string>
+
+    <string name="error">Error</string>
 </resources>
