--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -180,13 +180,6 @@
     <string name="previous_chapter">Previous chapter</string>
     <string name="brightness_lower">Brightness lower</string>
     <string name="brightness_higher">Brightness higher</string>
-    <string name="tts_slower">TTS slower</string>
-    <string name="tts_faster">TTS faster</string>
-    <string name="tts_play">Play</string>
-    <string name="tts_pause">Pause</string>
-    <string name="tts_stop">Stop</string>
-    <string name="tts_previous">Go backward</string>
-    <string name="tts_next">Go forward</string>
     <string name="no_result">No result</string>
     <string name="note">Note</string>
     <string name="add_a_note">Add a note</string>
@@ -202,4 +195,14 @@
     <string name="play_or_pause">Play or pause</string>
     <string name="go_forward_30_seconds">Go forward 30 seconds</string>
     <string name="select_a_font">Select a font</string>
+    <string name="close">Close</string>
+    <string name="language">Language</string>
+
+    <string name="tts_play">Play</string>
+    <string name="tts_pause">Pause</string>
+    <string name="tts_stop">Stop</string>
+    <string name="tts_previous">Go backward</string>
+    <string name="tts_next">Go forward</string>
+    <string name="tts_settings">Speech settings</string>
+    <string name="tts_rate">Rate</string>
 </resources>
