--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -208,7 +208,8 @@
     <string name="tts_pause">Pause</string>
     <string name="tts_play">Play</string>
     <string name="tts_previous">Go backward</string>
-    <string name="tts_rate">Rate</string>
+    <string name="speed_rate">Speed</string>
+    <string name="pitch_rate">Pitch</string>
     <string name="tts_settings">Speech settings</string>
     <string name="tts_stop">Stop</string>
     <string name="tts_voice">Voice</string>
