--- a/readium/shared/src/main/res/values/strings.xml
+++ b/readium/shared/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="r2.shared.resource.exception.unavailable">The resource is currently unavailable, please try again later</string>
     <string name="r2_shared_resource_exception_offline">The Internet connection appears to be offline</string>
     <string name="r2.shared.resource.exception.out_of_memory">The resource is too large to be read on this device</string>
-    <string name="r2.shared.resource.exception.cancelled">The request was cancelled</string>
+    <string name="r2.shared.resource.exception.unexpected">An expected error occurred.</string>
     <string name="r2.shared.resource.exception.other">A service error occurred</string>
 
     <string name="r2.shared.http.exception.malformed_request">The provided request was not valid</string>
