--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -169,10 +169,32 @@
 
     <string name="end_of_chapter">End of chapter</string>
 
-    <string name="unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
-    <string name="unsupported_protocol">Unsupported protocol</string>
+    <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
     <string name="import_publication_success">Publication added to your library</string>
-    <string name="unable_add_pub_database">Unable to add publication to the database</string>
+    <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>
+
+    <string name="publication_error_unsupported_asset">Publication format is not supported</string>
+    <string name="publication_error_not_found">Publication has not been found.</string>
+    <string name="publication_error_unavailable">Publication is temporarily unavailable.</string>
+    <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
+    <string name="publication_error_forbidden">You are not allowed to open this publication</string>
+    <string name="publication_error_out_of_memory">There is not enough memory on this device to open the publication.</string>
+    <string name="publication_error_scheme_not_supported">Publication source not supported.</string>
+    <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
+    <string name="publication_error_unexpected">An unexpected error occurred.</string>
+
+    <string name="r2.shared.publication.content_protection.exception.not_supported">This publication cannot be opened because it is protected with %1$s</string>
+    <string name="r2.shared.publication.content_protection.exception.not_supported.unknown">This publication cannot be opened because it is protected with an unknown DRM</string>
+
+    <string name="r2.shared.resource.exception.bad_request">Invalid request which can\'t be processed</string>
+    <string name="r2.shared.resource.exception.not_found">Resource not found</string>
+    <string name="r2.shared.resource.exception.forbidden">You are not allowed to access the resource</string>
+    <string name="r2.shared.resource.exception.unavailable">The resource is currently unavailable, please try again later</string>
+    <string name="r2_shared_resource_exception_offline">The Internet connection appears to be offline</string>
+    <string name="r2.shared.resource.exception.out_of_memory">The resource is too large to be read on this device</string>
+    <string name="r2.shared.resource.exception.unexpected">An expected error occurred.</string>
+    <string name="r2.shared.resource.exception.other">A service error occurred</string>
+
     <string name="failed_parsing_catalog">Failed parsing Catalog</string>
     <string name="next_chapter">Next chapter</string>
     <string name="next_sentence">Next sentence</string>
