--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -183,17 +183,17 @@
     <string name="publication_error_invalid_publication">Publication looks corrupted.</string>
     <string name="publication_error_unexpected">An unexpected error occurred.</string>
 
-    <string name="r2.shared.publication.content_protection.exception.not_supported">This publication cannot be opened because it is protected with %1$s</string>
-    <string name="r2.shared.publication.content_protection.exception.not_supported.unknown">This publication cannot be opened because it is protected with an unknown DRM</string>
+    <string name="readium_shared_publication.content_protection.exception.not_supported">This publication cannot be opened because it is protected with %1$s</string>
+    <string name="readium_shared_publication.content_protection.exception.not_supported.unknown">This publication cannot be opened because it is protected with an unknown DRM</string>
 
-    <string name="r2.shared.resource.exception.bad_request">Invalid request which can\'t be processed</string>
-    <string name="r2.shared.resource.exception.not_found">Resource not found</string>
-    <string name="r2.shared.resource.exception.forbidden">You are not allowed to access the resource</string>
-    <string name="r2.shared.resource.exception.unavailable">The resource is currently unavailable, please try again later</string>
-    <string name="r2_shared_resource_exception_offline">The Internet connection appears to be offline</string>
-    <string name="r2.shared.resource.exception.out_of_memory">The resource is too large to be read on this device</string>
-    <string name="r2.shared.resource.exception.unexpected">An expected error occurred.</string>
-    <string name="r2.shared.resource.exception.other">A service error occurred</string>
+    <string name="readium_shared_resource.exception.bad_request">Invalid request which can\'t be processed</string>
+    <string name="readium_shared_resource.exception.not_found">Resource not found</string>
+    <string name="readium_shared_resource.exception.forbidden">You are not allowed to access the resource</string>
+    <string name="readium_shared_resource.exception.unavailable">The resource is currently unavailable, please try again later</string>
+    <string name="readium_shared_resource_exception_offline">The Internet connection appears to be offline</string>
+    <string name="readium_shared_resource.exception.out_of_memory">The resource is too large to be read on this device</string>
+    <string name="readium_shared_resource.exception.unexpected">An expected error occurred.</string>
+    <string name="readium_shared_resource.exception.other">A service error occurred</string>
 
     <string name="failed_parsing_catalog">Failed parsing Catalog</string>
     <string name="next_chapter">Next chapter</string>
