--- a/test-app/src/main/res/values/strings.xml
+++ b/test-app/src/main/res/values/strings.xml
@@ -94,10 +94,13 @@
     <string name="return_button">Return</string>
 
     <string name="import_publication_unexpected_io_exception">Unable to add publication due to an unexpected error on your device</string>
+    <string name="import_publication_download_failed">Publication download failed.</string>
+    <string name="import_publication_no_acquisition">Acquisition is not possible.</string>
+
     <string name="import_publication_success">Publication added to your library</string>
     <string name="import_publication_unable_add_pub_database">Unable to add publication to the database</string>
 
-    <string name="publication_error_unsupported_asset">Publication format is not supported</string>
+    <string name="publication_error_unsupported_asset">Asset format is not supported</string>
     <string name="publication_error_not_found">Publication has not been found.</string>
     <string name="publication_error_unavailable">Publication is temporarily unavailable.</string>
     <string name="publication_error_incorrect_credentials">Provided credentials were incorrect</string>
